[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
tcod = { version = "0.15", features = ["serialization"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
